--- a/Resources/Prototypes/_Floof/Species/resomi.yml
+++ b/Resources/Prototypes/_Floof/Species/resomi.yml
@@ -48,7 +48,7 @@
 
 - type: markingPoints
   id: MobResomiMarkingLimits
-  onlyWhitelisted: true
+  onlyWhitelisted: false
   points:
     Hair:
       points: 1
