Make clawtail an actual raegent and its own recipe.

--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/Food_Drinks/drinks_glass.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/Food_Drinks/drinks_glass.yml
@@ -114,6 +114,7 @@
       - DrinkTheMartinez
       - DrinkMoonshineGlass
       - LemonLimeBittersGlass # DeltaV
+      - DrinkClawtailGlass # Claw Command
     chance: 0.8
     offset: 0.0
     #rare
