--- a/Resources/Prototypes/Maps/saltern.yml
+++ b/Resources/Prototypes/Maps/saltern.yml
@@ -82,4 +82,4 @@
             Musician: [ 1, 2 ]
             Passenger: [ -1, -1 ]
             #silicon
-            #StationAi: [ 1, 1 ] - Floof not ready yet
+            StationAi: [ 1, 1 ]
