--- a/Resources/Prototypes/Maps/shoukou.yml
+++ b/Resources/Prototypes/Maps/shoukou.yml
@@ -83,4 +83,6 @@
           SalvageSpecialist: [ 5, 5 ]
           MailCarrier: [ 2, 2 ]
           CargoTechnician: [ 3, 3 ]
-          
+          #silicon
+          StationAi: [ 1, 1 ]
+
