--- a/Resources/Prototypes/_Goobstation/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/_Goobstation/Catalog/Fills/Lockers/heads.yml
@@ -24,7 +24,7 @@
     contents:
     - id: Flash
     - id: ClothingEyesGlassesMedSec
-    - id: PinpointerNuclear
+    # - id: PinpointerNuclear
     - id: ClothingHandsGlovesCombat
     - id: WeaponLeverChester
     - id: WeaponEnergyRevolver
