--- a/Resources/Prototypes/_Goobstation/Entities/Clothing/Uniforms/jumpskirts.yml
+++ b/Resources/Prototypes/_Goobstation/Entities/Clothing/Uniforms/jumpskirts.yml
@@ -1,7 +1,7 @@
 - type: entity
   parent: ClothingUniformSkirtBase
   id: ClothingUniformJumpskirtBlueshieldOfficer
-  name: blueshield officer jumpskirt
+  name: claw command officer jumpskirt
   description: A short-sleeved grey and blue jumpskirt, made out of a sturdy material. Blueshield standard issue.
   components:
   - type: Sprite
