--- a/Resources/Prototypes/_Goobstation/Entities/Objects/Misc/identification_cards.yml
+++ b/Resources/Prototypes/_Goobstation/Entities/Objects/Misc/identification_cards.yml
@@ -2,7 +2,7 @@
 - type: entity
   parent: IDCardStandard
   id: BlueshieldIDCard
-  name: blueshield officer ID card
+  name: claw command officer ID card
   components:
   - type: Sprite
     layers:
