Add Trash revolver to Claw Command Maid's customizable loadout.

--- a/Resources/Prototypes/CharacterItemGroups/Jobs/Command/blueshield_maid.yml
+++ b/Resources/Prototypes/CharacterItemGroups/Jobs/Command/blueshield_maid.yml
@@ -18,6 +18,13 @@
       id: LoadoutClothingBlueshieldMaidDuraVest
 
 - type: characterItemGroup
+  id: LoadoutBlueshieldMaidWeapons
+  maxItems: 1
+  items:
+    - type: loadout
+      id: LoadoutClothingBlueshieldMaidRevolver
+
+- type: characterItemGroup
   id: LoadoutBlueshieldMaidUniforms
   maxItems: 1
   items:
