--- a/Resources/Prototypes/Entities/Stations/nanotrasen.yml
+++ b/Resources/Prototypes/Entities/Stations/nanotrasen.yml
@@ -31,6 +31,8 @@
     - BaseStationCaptainState # DeltaV
     - BaseStationStockMarket # DeltaV
     - BaseStationEmergencyAccessMedbayState # claw command
+  #  - BaseStationCodeBlueSecretState # claw command
+
   categories: [ HideSpawnMenu ]
   components:
     - type: Transform
