Gave CCO security belts (not Corporate judo however since they got CQC for 10 points)

--- a/Resources/Prototypes/Loadouts/Jobs/Security/uncategorized.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Security/uncategorized.yml
@@ -51,9 +51,14 @@
   requirements:
     - !type:CharacterItemGroupRequirement
       group: LoadoutSecurityBelt
-    - !type:CharacterDepartmentRequirement
-      departments:
+    - !type:CharacterLogicOrRequirement
+      requirements:
+      - !type:CharacterDepartmentRequirement
+        departments:
         - Security
+      - !type:CharacterJobRequirement
+        jobs:
+        - BlueshieldOfficer
   items:
     - ClothingBeltSecurityWebbingFilled
 
@@ -65,9 +70,14 @@
   requirements:
     - !type:CharacterItemGroupRequirement
       group: LoadoutSecurityBelt
-    - !type:CharacterDepartmentRequirement
-      departments:
+    - !type:CharacterLogicOrRequirement
+      requirements:
+      - !type:CharacterDepartmentRequirement
+        departments:
         - Security
+      - !type:CharacterJobRequirement
+        jobs:
+        - BlueshieldOfficer
   items:
     - ClothingBeltSecurityFilled
 
@@ -79,9 +89,14 @@
   requirements:
     - !type:CharacterItemGroupRequirement
       group: LoadoutSecurityBelt
-    - !type:CharacterDepartmentRequirement
-      departments:
+    - !type:CharacterLogicOrRequirement
+      requirements:
+      - !type:CharacterDepartmentRequirement
+        departments:
         - Security
+      - !type:CharacterJobRequirement
+        jobs:
+        - BlueshieldOfficer
   items:
     - ClothingBeltHolster
 
