--- a/Resources/Prototypes/_Goobstation/Entities/Objects/Weapons/Guns/Ammunition/Magazines/magnum_caliber_magazine.yml
+++ b/Resources/Prototypes/_Goobstation/Entities/Objects/Weapons/Guns/Ammunition/Magazines/magnum_caliber_magazine.yml
@@ -51,3 +51,11 @@
   components:
   - type: BallisticAmmoProvider
     proto: null
+
+- type: entity
+  id: MagazineMagnumLeverRifleRubber
+  parent: MagazineMagnumLeverRifle
+  suffix: Rubber
+  components:
+  - type: BallisticAmmoProvider
+    proto: CartridgeMagnumRubber
