Claw Command Adition

--- a/Resources/Prototypes/_Goobstation/Entities/Objects/Weapons/Guns/Ammunition/Magazines/magnum_caliber_magazine.yml
+++ b/Resources/Prototypes/_Goobstation/Entities/Objects/Weapons/Guns/Ammunition/Magazines/magnum_caliber_magazine.yml
@@ -52,6 +52,8 @@
   - type: BallisticAmmoProvider
     proto: null
 
+# ClawCommand Adition:
+
 - type: entity
   id: MagazineMagnumLeverRifleRubber
   parent: MagazineMagnumLeverRifle
