--- a/Resources/Prototypes/_Goobstation/Catalog/Fills/Boxes/security.yml
+++ b/Resources/Prototypes/_Goobstation/Catalog/Fills/Boxes/security.yml
@@ -8,6 +8,6 @@
     - id: MagazineBoxMagnum
     - id: MagazineBoxMagnumFlash
     - id: MagazineBoxMagnumEMP
-    - id: MagazineBoxMagnumRubber
+    - id: MagazineBoxMagnumRubber #ClawCommand Adition
     - id: MagazineMagnumLeverRifleEmpty
       amount: 2
