--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/toy.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/toy.yml
@@ -59,6 +59,8 @@
         - PlushieRobotCorgi
         - PlushieCatBlack
         - PlushieSteele # Claw Command
+        - PlushieMattew # ClawCommand
+        - PlushieStefanie # ClawCommand
         - PlushieCatGrey
         - PlushieCatOrange
         - PlushieCatSiames
