--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -1987,6 +1987,8 @@
       - PlushieRobotCorgi
       - PlushieCatBlack
       - PlushieSteele # Claw Command
+      - PlushieStefanie # Claw Command
+      - PlushieMattew # Claw Command
       - PlushieCatGrey
       - PlushieCatOrange
       - PlushieCatSiames
