--- a/Resources/Prototypes/_Goobstation/Roles/play_time_trackers.yml
+++ b/Resources/Prototypes/_Goobstation/Roles/play_time_trackers.yml
@@ -1,8 +1,8 @@
 - type: playTimeTracker
   id: JobBlueshieldOfficer
 
-- type: playTimeTracker
-  id: JobBlueshieldMaid
+#- type: playTimeTracker
+#  id: JobBlueshieldMaid
 
 - type: playTimeTracker
   id: JobNanotrasenRepresentative
